Rough-in of Twitter Feed

--- a/themes/westerndevs/layout/index.ejs
+++ b/themes/westerndevs/layout/index.ejs
@@ -6,6 +6,7 @@
 
 <%- partial('_widget/home_page/recent_posts') %>
 <%- partial('_widget/home_page/latest_podcast') %>
+<%- partial('_widget/home_page/twitter') %>
 <%- partial('_widget/home_page/speaking') %>
 <%- partial('_widget/home_page/what_weve_done') %>
 <%- partial('_widget/home_page/feature') %>
